--- a/hero-conjurer/templates/start.html
+++ b/hero-conjurer/templates/start.html
@@ -12,7 +12,7 @@
             <a class='tablinks item spells' data-tab='spells'>SPELLS</a>
             <a hidden class='tablinks item spells-cantrip' data-tab='spells-cantrip'>SPELLS</a>
             <a hidden class='tablinks item spells-first' data-tab='spells-first'>SPELLS</a>
-            <a class='tablinks item feats' data-tab='feats'>FEATS</a>
+            <!--<a class='tablinks item feats' data-tab='feats'>FEATS</a>-->
             <a class='tablinks item bio' data-tab='bio'>BIO</a>
             <a class='tablinks item summary' data-tab='summary'>SUMMARY</a>
         </nav>
